--- a/index.html
+++ b/index.html
@@ -441,5 +441,20 @@
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
         <script src="app.js"></script>
         <script src="sw.js"></script>
+        <script>
+            self.addEventListener('install', evt=>{
+    console.log('Service Worker is Registered')
+});
+
+self.addEventListener('activate', evt =>{
+    console.log('Service Worker is Activated')
+});
+
+self.addEventListener('fetch', evt=>{
+    console.log('Service Worker is fetching')
+});
+        </script>
+
+
     </body>
 </html>
