--- a/index.html
+++ b/index.html
@@ -454,7 +454,13 @@ self.addEventListener('fetch', evt=>{
     console.log('Service Worker is fetching')
 });
         </script>
-
+<script>
+    if('serviceWorker' in navigator){
+    navigator.serviceWorker.register('/sw.js')
+    .then((reg)=> console.log('Service Worker Registered', reg))
+    .catch((err)=> console.log('Service Worker not Registered', err))
+}
+</script>
 
     </body>
 </html>
